Fixed some front end issues regarding async storage and improved backend for game creation
