# root/Backend/src/controllers/token.js
@@ -6,6 +6,7 @@ const bcrypt = require('bcrypt')
 const jws = require('jws')
 require('mandatoryenv').load(['TOKENSECRET'])
 const { TOKENSECRET } = process.env
+const debug = require("debug")("TokenController");
 
 function validPassword (password) {
   return /^(?=.*[\d])(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*])[\w!@#$%^&*]{8,}$/.test(password)
@@ -33,12 +34,17 @@ module.exports = {
 
 
   async verifieTokenPresent(req,res,next) {
+    debug("Checking is user token present and its validity");
     // Code vérifiant qu'il y a bien un token dans l'entête
-    if (!req.headers || !req.headers.hasOwnProperty('x-access-token'))
+    if (!req.headers || !req.headers.hasOwnProperty('x-access-token')){
+      debug("Cannot find x-access-token in the header");
       throw {code: 403, message: 'Token missing'}
+    }
     // Code vérifiant la validité du token 
-    if (!jws.verify(req.headers['x-access-token'],'HS256',TOKENSECRET))
+    if (!jws.verify(req.headers['x-access-token'],'HS256',TOKENSECRET)){
+      debug("Token is not valid");
       throw {code: 403, message: 'Token invalid'}
+    }
     // Le payload du token contient le login de l'utilisateur
     // On modifie l'objet requête pour mettre le login à disposition pour les middleware suivants
     req.login=jws.decode(req.headers['x-access-token']).payload
@@ -68,26 +74,35 @@ module.exports = {
   async checkUser(req,res,next){
      // Code vérifiant que le login est celui du bon utilisateur (présent si une fonction middleware
     // a au préalable ajouté le login dans req)
-    const {  name } = {name : req.login}
+    debug("Checking if the user is present in the database");
+    debug("user name = " + req.login);
+    const { name } = {name : req.login}
     const data = await User.findOne({name: name}).select({_id:1,__v:0,password:0,email:0})
-
-    if(!data) throw new CodeError('User not found', status.NOT_FOUND)
+    
+    if(!data){
+      debug("User was not found in the database");
+      throw new CodeError('User not found', status.NOT_FOUND)
+    }
 
     let tmp = {};
     try{
       if (req.body) {tmp = JSON.parse(req.body.data)};
     }
     catch(err){
-      console.log("Caught an error while extracting body, err = " + err)
+      debug("Caught an error while extracting body, err = " + err)
     }
     /*On vérifie que le token correspond à l'utilisateur qu'on veut modifier 
       ou à l'utilisateur qui veur créer la partie ou l'utilisateur qui veut rejoindre la partie.
     */
-    if ((tmp.prev && data.name != tmp.prev)|| (tmp.hote_name && tmp.hote_name!=data.name) || (tmp.id_joueur && tmp.id_joueur != data.name))
-      // Provoque une réponse en erreur avec un code de retour 403 
+   // || (tmp.hote_name && tmp.hote_name!=data.name) 
+   //     || (tmp.id_joueur && tmp.id_joueur != data.name)){      
+    if ((tmp.prev && data.name != tmp.prev)) {  
+     // Provoque une réponse en erreur avec un code de retour 403 
       throw {code: 403, message: 'User name and user token do not match'}
-    
+    }
+        
     // On appelle la fonction middleware suivante que si la condition est vérifiée
+    debug("User is in the database");
     next()
   },
 
